--- a/style.css
+++ b/style.css
@@ -76,3 +76,16 @@ body
         transform: rotate(180deg)
     }
 }
+
+.forme {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    height: 300px;
+    width: 300px;
+    background-color: #d2691e;
+    border-bottom: solid 8px #6B360F;
+    border-left: solid 8px #6B360F;
+    border-right: solid 8px #6B360F;
+}
