--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ body
 }
 .clock {
     position:absolute;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     border: 11px solid #ac4d00;
     border-radius: 50%;
     left: 50%;
@@ -19,11 +19,11 @@ body
 .clock::before {
     position: absolute;
     content: '';
-    height: 65px;
-    width: 6px;
+    height: 50px;
+    width: 5px;
     background: black;
     top: 50%;
-    left: calc(50% - 5px);
+    left: 50%;
     border-radius: 50px;
     animation: spin 6s linear infinite;
     transform-origin: top;
@@ -32,11 +32,11 @@ body
 .clock::after {
     position: absolute;
     content: '';
-    height: 45px;
-    width: 6px;
+    height: 30px;
+    width: 5px;
     background: black;
     top: 50%;
-    left: calc(50% - 5px);
+    left: 50%;
     border-radius: 50px;
     animation: spin 60s linear infinite;
     transform-origin: top;
@@ -45,8 +45,8 @@ body
 .clock_container::before{
     content: '';
     position: absolute;
-    width: 20px;
-    height: 20px;
+    width: 14px;
+    height: 14px;
     border-radius: 50%;
     background: #ac4d00;
     z-index : 1;
@@ -58,14 +58,14 @@ body
 .clock_container::after{
     content: '';
     position: absolute;
-    width: 10px;
+    width: 8px;
     height: 2px;
     background: black;
     left: calc(50%);
-    top : calc(0% + 20px);
+    top : 10%;
     z-index:2;
     transform:translate(-50%, -50%);
-    box-shadow: 80px 80px 0 0 black, -80px 80px 0 0 black, 0 160px 0 0 black;
+    box-shadow: 60px 60px 0 0 black, -60px 60px 0 0 black, 0 120px 0 0 black;
 }
 
 @keyframes spin{
