--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ body
 }
 
 .door_background {
-    background-color: black;
+    background-color: #000000;
     border-radius: 8%;
     height: 100px;
     width: 100px;
@@ -93,6 +93,14 @@ body
     right: -50px;
     top: 90px;
     }
+
+.bird{
+    height: 100px;
+    width: 100px;
+    border-radius: 8%;
+    z-index: 0;
+    animation: bird 6s linear infinite;
+}
 
 .door_right {
     background-color: #C5A48A;
@@ -145,6 +153,8 @@ body
         transform : translateZ(0) rotateY(0deg);
     }
 }
+
+
 .carre {
     position: absolute;
     left: 50%;
@@ -161,7 +171,7 @@ body
 .triangle {
     position: absolute;
     left: 50%;
-    top: 20%;
+    top: 5%;
     transform: translate(-50%, -50%);
     border-left: 145px solid transparent;
     border-right: 145px solid transparent;
@@ -171,9 +181,14 @@ body
 .roof {
     position: absolute;
     left: 50%;
-    top: 19%;
+    top: 5%;
     transform: translate(-50%, -50%);
     border-left: 170px solid transparent;
     border-right: 170px solid transparent;
     border-bottom: 200px solid #6B360F;
 }
+
+
+
+
+
