--- a/style.css
+++ b/style.css
@@ -8,24 +8,23 @@ body
 }
 
 .clock {
-    position:absolute;
+    position: relative;
     width: 150px;
     height: 150px;
     border: 11px solid #ac4d00;
     border-radius: 100px;
-    left: 50%;
-    top: 40%;
     background: #fefbf2;
-    transform: translate(-50%, -50%);
+    top: 64px;
+    left: 64px;
     box-shadow: inset 0px 0px 15px black;
 }
 
 .clock::before {
-    position: absolute;
     content: '';
     height: 50px;
     width: 5px;
     background: black;
+    position: absolute;
     top: 50%;
     left: calc(50% - 2px);
     border-radius: 50px;
@@ -34,11 +33,11 @@ body
 }
 
 .clock::after {
-    position: absolute;
     content: '';
     height: 30px;
     width: 5px;
     background: black;
+    position: absolute;
     top: 50%;
     left: calc(50% - 2px);
     border-radius: 50px;
@@ -48,13 +47,13 @@ body
 
 .clock_container::before{
     content: '';
-    position: absolute;
     width: 14px;
     height: 14px;
     border-radius: 50%;
     background: #ac4d00;
     z-index : 2;
     transform: translate(-50%, -50%);
+    position: absolute;
     left: 50%;
     top: 50%;
 }
@@ -126,7 +125,14 @@ body
     position: absolute;
     right: -50px;
     top: 65px;
-    transform: translateZ(0);
+}
+
+.bird{
+    height: 100px;
+    width: 100px;
+    border-radius: 8%;
+    z-index: 0;
+    animation: bird 6s linear infinite;
 }
 
 .door_right {
@@ -161,7 +167,7 @@ body
     0% {
         transform: translateZ(0) rotateY(0deg);
     }
-    25% {
+    35% {
         transform: translateZ(0) rotateY(90deg);
     }
     40% {
@@ -173,7 +179,7 @@ body
     0%{
         transform :translateZ(0) rotateY(0deg);
     }
-    25% {
+    35% {
         transform : translateZ(0) rotateY(-90deg);
     }
     40% {
@@ -198,8 +204,8 @@ body
     border-bottom: 175px solid #d2691e;
     stroke:#6B360F;
     z-index: -2;
-    position: absolute;
-    top: 16%;
+    position: relative;
+    top: 120px;
 }
 
 .roof {
@@ -294,5 +300,3 @@ body
         opacity: 0;
     }
 }
-
-
