--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ body
     width: 100px;
     border-radius: 8%;
     transform: translateZ(0);
-    animation: bird1 calc(var(--duration)) linear infinite;
+    animation: bird1 calc(var(--duration)-1s) linear infinite;
 }
 
 @keyframes bird1{
