--- a/style.css
+++ b/style.css
@@ -287,6 +287,7 @@ body
 }
 
 /* Ouverture des portes du coucou */
+/* Porte de droite*/
 
 @keyframes door_right {
     0% {
@@ -300,6 +301,9 @@ body
     }
 }
 
+/* Porte de gauche*/
+
+
 @keyframes door_left {
     0%{
         transform :translateZ(0) rotateY(0deg);
@@ -312,7 +316,7 @@ body
     }
 }
 
-/* Descentes des poids de l'horloge */
+/* Descente des poids de l'horloge */
 /* Poids de gauche */
 
 @keyframes weight_left {
